# MindFlow

./: .gitignore  MANIFEST.in  README.md  __init__.py  __main__.py  converse.py  extensions.py  pyproject.toml  requirements.txt  setup.py  t.py
mindflow/: __init__.py  __main__.py  cli.py  config.default.toml  profile.py  profile.template.py  profile.template.toml
mindflow/apps/: __init__.py
mindflow/computer/: __init__.py  test.py
mindflow/core/: __init__.py  cli.py  core.py  defaults.py
mindflow/core/feature concepts/: interactive.txt
mindflow/core/prompts/: auto_skill.txt  classify.txt  conversational.txt  initial.txt  initial_task.txt  instructions.txt  interface.txt  memorise.txt  routine.txt  task.txt
mindflow/core/utils/: computer.py  extensions.py  general.py  llm.py  memory.py  profile.py
mindflow/extensions/: __init__.py
mindflow/extensions/browser/: __init__.py  browser.py  config.default.toml  omproject.toml
mindflow/extensions/browser/docs/: instructions.md
mindflow/extensions/browser/mindflow/: docs.md  instructions.md
mindflow/extensions/browser/src/: engines.json  user_agents.txt
mindflow/extensions/browser/tests/: tests.py
mindflow/extensions/browser/utils/: general.py  google.py  google_snippets.py
mindflow/extensions/email/: __init__.py  email.py  omproject.toml
mindflow/extensions/email/docs/: instructions.md
mindflow/extensions/extensions/browser/: omproject.toml
mindflow/extensions/extensions/browser/docs/: instructions.md
mindflow/omi/: __init__.py
mindflow/profile/: __init__.py  profile.py  template.py
mindflow/profiles/: default.yaml
mindflow/prompts/: classify.txt
mindflow/speech/: tts.py
mindflow/tests/: __init__.py  converse.py  search.py  snippets.py
mindflow/tests/cases/: browser.py
mindflow/utils/: __init__.py  core.py  model.py  supported.json
tests/: search.py
(+1 files in other folders)
