[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mindflow"
version = "0.0.8"
description = "Autonomous LLM personal agent."
authors = ["Run Tu <run-tu@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/run-tu/mindflow"

[tool.poetry.dependencies]
python = "^3.8,<4.0"
gradio_client = "^1.3.0" 
toml = "^0.10"
rich = "^14.0"

[tool.poetry.scripts]
macro = "mindflow.__main__:main"

[tool.poetry.extras]
dev = ["pytest"]
