[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mindflow"
version = "0.0.18"
description = "Multimodal Assistant. Human Interface for computers."
authors = ["Run Tu <run-tu@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/run-tu/mindflow"

[tool.poetry.dependencies]
python = "^3.8,<4.0"
gradio_client = ">=1.3.0" 
toml = ">=0.10"
rich = ">=10.0"
snova = ">=0.0.5"

[tool.poetry.scripts]
macro = "mindflow.__main__:main"

[tool.poetry.extras]
dev = ["pytest"]
