[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mindflow"
version = "0.2.3"
description = "Multimodal Assistant. Human Interface for computers."
authors = ["Run Tu <run-tu@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/run-tu/mindflow"

[tool.poetry.dependencies]
python = "^3.8,<4.0"
gradio_client = ">=1.3.0" 
toml = ">=0.10"
rich = ">=10.0"
playwright="*"
asyncio="*"
markdownify="*"
beautifulsoup4="*"
pybrowsers="*"
chromadb="*"
rich-argparse="*"

[tool.poetry.scripts]
macro = "mindflow.__main__:main"
omi = "mindflow.omi:main"

[tool.poetry.extras]
dev = ["pytest"]
